<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.ametro.ui.activities.MapList">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_add_circle_black_24dp"
        app:showAsAction="ifRoom|withText|collapseActionView"/>

    <item android:id="@+id/action_update"
        android:title="@string/action_update"
        android:icon="@drawable/ic_cloud_download_black_24dp"
        app:showAsAction="ifRoom|withText|collapseActionView"/>

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom|withText|collapseActionView"/>


</menu>
