<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ListContainer"
    tools:context="org.ametro.ui.activities.CityList">

    <ListView
        android:id="@+id/list"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MapList"/>


    <LinearLayout
        android:id="@+id/no_maps"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_map_list_no_installed_maps"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_map_list_tap_to_add_new_maps"
            android:gravity="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/msg_map_list_empty"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminateOnly="true"
        android:indeterminateBehavior="cycle"
        />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/msg_map_list_downloading"
        />
</RelativeLayout>
